--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.1",
+    "@stripe/stripe-js": "^5.6.0",
     "@tabler/icons-react": "^3.29.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
@@ -19,6 +20,7 @@
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
+    "razorpay": "^2.9.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1"
