--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons-react": "^3.29.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
+    "firebase-admin": "^13.1.0",
     "framer-motion": "^12.0.11",
     "icons-react": "^3.7.1",
     "mongodb": "^6.13.0",
