feat: integrate Google Calendar API for booking meetings and enhance consultant model with Google tokens

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ yarn-error.log*
 next-env.d.ts
 
 ec-booking-e734f-firebase-adminsdk-fbsvc-5f1f0824e8.json
+epitome-consulting-booking-488ad9ab6e9c.json
