--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
     "@radix-ui/react-label": "^2.1.1",
     "@stripe/stripe-js": "^5.6.0",
     "@tabler/icons-react": "^3.29.0",
@@ -15,12 +16,15 @@
     "clsx": "^2.1.1",
     "firebase-admin": "^13.1.0",
     "framer-motion": "^12.0.11",
+    "google-auth-library": "^9.15.1",
+    "googleapis": "^144.0.0",
     "icons-react": "^3.7.1",
-    "mongodb": "^6.13.0",
+    "mongodb": "^5.9.2",
     "mongoose": "^8.9.6",
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
+    "nookies": "^2.5.2",
     "razorpay": "^2.9.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
