--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "icons-react": "^3.7.1",
     "mongodb": "^5.9.2",
     "mongoose": "^8.9.6",
-    "next": "15.1.6",
+    "next": "^15.1.6",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.10.0",
     "nookies": "^2.5.2",
