--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "next-env.d.ts",
-    "src/app/next/api/auth/[...nextauth].ts",
+    "src/app/api/auth/[...nextauth].ts",
     "src/app/api/bookings/[consultantid]/route.js",
     "src/app/api/consultants/[consultantid]/route.js",
     "src/app/api/events/[eventid]/route.js",
